--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Microsoft - AI, Cloud, Productivity, Computing, Gaming &amp; Apps</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/x-icon" href="Assets/favicon.ico">
 </head>
 
 <body>
